--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
-      { "source": "/projeto1/(.*)", "destination": "/projeto1/$1" },
-      { "source": "/projeto2/(.*)", "destination": "/projeto2/$1" }
+      { "source": "/tech-event/(.*)", "destination": "/tech-event/$1" },
+      { "source": "/esg-event/(.*)", "destination": "/esg-event/$1" }
     ]
   }
   
